# wavaugmentate

./: .gitignore  .readthedocs.yaml  Pipfile  README.md  common_test_functions.py  mcsaugment.py  plastov_openmedia_test.ipynb  prep_publication.sh  publication.sh  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_mcs_class.py  test_mcsaugment.py  test_wachain_object.py  test_wavaugmentate.py  wavaugmentate.py
.github/workflows/: pylint.yml  python-app.yml
docs/: conf.py  index.rst
docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/source/: aug.html  mcs.html  modules.html  setup.html  usage.html  wavaugmentate.html  wavaugmentate_pckg.html
docs/source/: aug.rst  mcs.rst  usage.rst  wavaug.rst  wavaugmentate.rst  wavaugmentate_pckg.rst
src/wavaugmentate/: __init__.py  aug.py  mcs.py  wavaug.py  wavaugmentate.py
test_sounds/: readme.md
tests/: __init__.py  common_test_functions.py  test_aug_class.py
tests/wavaugmentate/: common_test_functions.py  plastov_openmedia_test.ipynb  test_aug_class.py  test_mcs_class.py  test_wavaugmentate.py
tests/wavaugmentate/outputwav/: readme.md
tests/wavaugmentate/test_sounds/: readme.md
