[metadata]
name = wavaugmentate
version = 0.1.0
author = Igor Plastov
author_email = chetverovod@gmail.com
description = The module wavaugmentate makes audio signal augmentation conversions. 
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/chetverovod/wavaugmentate
project_urls =
    Bug Tracker = https://github.com/chetverovod/wavaugmentate/issues
    repository = https://github.com/chetverovod/wavaugmentate
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src